# birnam

./: .gitignore  CHANGES.rst  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: linting.yml
docs/: birnam.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
src/birnam/: __init__.py  super_match.py
tests/birnam/: test_super_match.py
