[project]
name = "birnam"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "Tom J Wilson", email = "t.j.wilson@exeter.ac.uk" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "numpy",
    "pandas",
]

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "tox", # Used for unit-testing and coverage
    "pre-commit", # Used to run checks before finalizing a git commit
    "pylint", # Used for static linting of files
]
test = [
    "pytest-astropy",
]
docs = [
    "sphinx-astropy",
    "sphinx-fortran",
    "six",
]

[metadata]
long_description = { file = "README.md" }
url = "https://github.com/macauff/birnam"

[build-system]
requires = [
    "scikit-build-core",
    "numpy",
]
build-backend = "scikit_build_core.build"

[tool.cibuildwheel]
build-frontend = "build"
skip = [
    "*musl*",  # we don't support MUSL Linux
    "pp*",  # we don't support PyPy
]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/birnam/_version.py"]

[tool.setuptools_scm]
write_to = "src/birnam/_version.py"

[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 110